# Portable-Network-Archive

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  Specification.md  compose.yml  dist-workspace.toml  questio.md  release.toml  todo.md  verify_fflags.sh  zizmor.yml  ロードマップ.md
cli/: Cargo.toml  README.md
cli/benches/: create.rs  extract.rs  list.rs  split.rs
cli/src/: chunk.rs  cli.rs  command.rs  create.rs  ext.rs  extract.rs  lib.rs  list.rs  main.rs  utils.rs  value.rs
cli/src/chunk/: acl.rs  fflag.rs  mac_metadata.rs
cli/src/cli/: old_style.rs  value.rs
cli/src/cli/value/: argon2id_params.rs  chunk_type.rs  color_choice.rs  compression_level.rs  datetime.rs  log_level.rs  missing_time_policy.rs  name_id_pair.rs  options.rs  pbkdf2_sha256_params.rs  private_chunk_type.rs
cli/src/command/: acl.rs  append.rs  bsdtar.rs  bugreport.rs  chmod.rs  chown.rs  chunk.rs  commons.rs  compat.rs  complete.rs  concat.rs  core.rs  create.rs  delete.rs  diff.rs  experimental.rs  extract.rs  fflag.rs  list.rs  migrate.rs  sort.rs  split.rs  stdio.rs  strip.rs  update.rs  verify.rs  xattr.rs
cli/src/command/core/: archive_source.rs  ignore.rs  iter.rs  mtree.rs  multipart.rs  path.rs  path_filter.rs  path_lock.rs  path_transformer.rs  permission.rs  re.rs  safe_dir.rs  safe_writer.rs  time_filter.rs  timestamp.rs
cli/src/command/experimental/: generate.rs  split.rs
cli/src/command/list/: table.rs
cli/src/command/stdio/: create.rs  extract.rs
cli/src/ext/: read_buf.rs
cli/src/utils/: acl.rs  cli_parsers.rs  env.rs  fmt.rs  fs.rs  globs.rs  io.rs  mmap.rs  os.rs  path.rs  process.rs  re.rs  sparse.rs  str.rs  thread.rs  windows_glob.rs
cli/src/utils/acl/: unix.rs  windows.rs
cli/src/utils/fmt/: hex.rs
cli/src/utils/fs/: file_id.rs  nodump.rs  owner.rs  windows.rs
cli/src/utils/os/: unix.rs  windows.rs
cli/src/utils/re/: bsd.rs  gnu.rs
cli/src/value/: name_id.rs  name_id_pair.rs
cli/tests/: acl.rs  append.rs  chmod.rs  chown.rs  concat.rs  delete.rs  encrypt.rs  hardlink.rs  keep_acl.rs  keep_all.rs  list.rs  multipart.rs  password_from_file.rs  password_hash.rs  restore_acl.rs  solid_mode.rs  split.rs  strip.rs  symlink.rs  update.rs  user_group.rs  xattr.rs
cli/tests/cli/: acl.rs  append.rs  bsdtar.rs  bugreport.rs  cd_option.rs  chmod.rs  chown.rs  chunk.rs  combination.rs  complete.rs  concat.rs  create.rs  delete.rs  device_files.rs  diff.rs  encrypt.rs  extract.rs  fflag.rs  hardlink.rs  junction.rs  keep_acl.rs  keep_all.rs  list.rs  main.rs  migrate.rs  multipart.rs  nodump.rs  password_from_file.rs  password_hash.rs  restore_acl.rs  restore_acl_0_19_1.rs  safe_dir.rs  solid_mode.rs  sort.rs  split.rs  stdio.rs  strip.rs  symlink.rs  update.rs  user_group.rs  (+5 more)
cli/tests/cli/acl/: dump.rs  get.rs  missing_file.rs  restore.rs  set.rs
cli/tests/cli/append/: atime.rs  ctime.rs  entry_order.rs  exclude.rs  exclude_vcs.rs  mtime.rs  option_exclude.rs  option_exclude_vcs.rs  option_newer_ctime.rs  option_newer_ctime_than.rs  option_newer_mtime.rs  option_newer_mtime_than.rs  option_older_ctime.rs  option_older_ctime_than.rs  option_older_mtime.rs  option_older_mtime_than.rs  self_add.rs
cli/tests/cli/bsdtar/: archive_inclusion.rs  archive_source_uid_override.rs  encrypted_rename.rs  files_from.rs  list_line_ending.rs  missing_file.rs  mtree.rs  old_style.rs  option_auto_compress.rs  option_block_size.rs  option_cd.rs  option_check_links.rs  option_exclude_vcs.rs  option_fast_read.rs  option_follow_links_combined.rs  option_help.rs  option_ignore_zeros.rs  option_mac_metadata.rs  option_no_recursive.rs  option_options.rs  option_same_permissions.rs  option_substitution.rs  option_to_stdout.rs  option_update.rs  option_update_strip_components.rs  option_version.rs  path_traversal.rs  strip_components.rs  symlink.rs  unlink_first.rs  windows_glob.rs
cli/tests/cli/chmod/: edge_cases.rs  glob_pattern.rs  keep_solid.rs  missing_file.rs  multipart.rs  multiple_clauses.rs  numeric.rs  password.rs  password_file.rs  symbolic_all.rs  symbolic_combined.rs  symbolic_group.rs  symbolic_other.rs  symbolic_user.rs  unsolid.rs
cli/tests/cli/chown/: empty_files.rs  group_only.rs  missing_file.rs  no_owner_lockup.rs  no_owner_lookup.rs  no_owner_lookup_numeric.rs  option_no_owner_lookup.rs  option_no_owner_lookup_numeric.rs  preserve_owner_absence.rs  user_and_group.rs  user_only.rs
cli/tests/cli/chunk/: list.rs  list_basic.rs  option_header.rs  option_long.rs  (+1 more)
cli/tests/combination/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aes_cbc.rs  aes_ctr.rs  aes_gcm.rs  camellia_cbc.rs  camellia_ctr.rs  camellia_gcm.rs  decode_archive.rs  split_archive.rs
lib/: Cargo.toml  README.md
lib/benches/: archive_empty.rs  archive_store.rs  create_extract.rs
lib/benches/create_extract/: archive.rs  empty.rs  main.rs
lib/examples/: async_io.rs  change_compression_method.rs  copy_entries.rs
lib/src/: acl.rs  archive.rs  chunk.rs  cipher.rs  compress.rs  crc.rs  entry.rs  error.rs  ext.rs  hash.rs  io.rs  lib.rs  prelude.rs  random.rs  read.rs  util.rs  write.rs
lib/src/archive/: entry.rs  header.rs  item.rs  option.rs  read.rs  write.rs
lib/src/chunk/: crc.rs  read.rs  traits.rs  types.rs  write.rs
lib/src/cipher/: aead.rs  block.rs  gcm.rs  read.rs  stream.rs
lib/src/compress/: deflate.rs  xz.rs  zstandard.rs  zstd.rs
lib/src/entry/: attr.rs  builder.rs  content.rs  data.rs  header.rs  key_cache.rs  meta.rs  name.rs  options.rs  read.rs  reference.rs  sparse.rs  write.rs
lib/src/ext/: time.rs
lib/src/io/: finish.rs
lib/src/util/: bounded.rs  path.rs  str.rs  utf8path.rs
lib/tests/: copy_entries.rs  extract_compatibility.rs  extract_multipart_compatibility.rs  extract_solid_compatibility.rs  hashed_password.rs  security.rs  windows_acl_values.rs
pna/: Cargo.toml  README.md
pna/src/: ext.rs  fs.rs  lib.rs  prelude.rs
pna/src/ext/: archive.rs  entry.rs  entry_builder.rs  metadata.rs  time.rs
pna/tests/: fs.rs
xtask/: Cargo.toml
xtask/src/: bsdtar_compat.rs  main.rs
(+546 files in other folders)
