[package]
name = "portable-network-archive-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.88"

[package.metadata]
cargo-fuzz = true

[package.metadata.dist]
dist = false

[dependencies]
libfuzzer-sys = "0.4"
libpna = { path = "../lib" }


[[bin]]
name = "aes_cbc"
path = "fuzz_targets/aes_cbc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aes_ctr"
path = "fuzz_targets/aes_ctr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "camellia_ctr"
path = "fuzz_targets/camellia_ctr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "camellia_cbc"
path = "fuzz_targets/camellia_cbc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "split_archive"
path = "fuzz_targets/split_archive.rs"
test = false
doc = false
bench = false
