[package]
name = "libpna"
version = "0.18.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "PNA(Portable-Network-Archive) decoding and encoding library"
repository = "https://github.com/ChanTsune/Portable-Network-Archive.git"
readme = "README.md"
categories = ["data-structures", "filesystem"]
keywords = ["pna", "archive", "crypto", "data"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
argon2 = { version = "0.5.3", features = ["std"] }
camellia = "0.1.0"
camino = "1.1.9"
cbc = { version = "0.1.2", features = ["std"] }
cipher = "0.4.4"
crc32fast = "1.4.2"
crypto-common = { version = "0.1.6", default-features = false }
ctr = { version = "0.9.2", features = ["std"] }
flate2 = "1.0.33"
futures-io = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", features = ["io"], optional = true }
liblzma = { version = "0.3.4", features = ["static"] }
password-hash = { version = "0.5.0", default-features = false }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"
zstd = { version = "0.13.2", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
liblzma = { version = "0.3.4", features = ["wasm"] }
zstd = { version = "0.13.2", features = ["wasm"] }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
pbkdf2 = { version = "0.12.2", features = ["simple", "parallel"] }

[dev-dependencies]
version-sync = "0.9.5"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7.12", features = ["compat"] }

[features]
wasm = ["zstd/wasm", "liblzma/wasm"] # Deprecated. This feature flag has been replaced by `cfg(target_arch = "wasm32")`.
zlib-ng = ["flate2/zlib-ng"]
unstable-async = ["dep:futures-io", "dep:futures-util"]

[[example]]
name = "async_io"
required-features = ["unstable-async"]

[[example]]
name = "change_compression_method"
