[package]
name = "libpna"
version = "0.25.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "PNA(Portable-Network-Archive) decoding and encoding library"
repository = "https://github.com/ChanTsune/Portable-Network-Archive.git"
readme = "README.md"
categories = ["data-structures", "filesystem"]
keywords = ["pna", "archive", "crypto", "data"]
rust-version = "1.82"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
argon2 = { version = "0.5.3", features = ["std"] }
arrayvec = "0.7.6"
camellia = "0.1.0"
camino = "1.1.9"
cbc = { version = "0.1.2", features = ["std"] }
cipher = "0.4.4"
crc32fast = "1.4.2"
crypto-common = { version = "0.1.6", default-features = false }
ctr = { version = "0.9.2", features = ["std"] }
flate2 = "1.1.1"
futures-io = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", features = ["io"], optional = true }
liblzma = { version = "0.4.1", features = ["static"] }
password-hash = { version = "0.5.0", default-features = false }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
zstd = { version = "0.13.3", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
liblzma = { version = "0.4.0", features = ["wasm"] }
zstd = { version = "0.13.2", features = ["wasm"] }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
pbkdf2 = { version = "0.12.2", features = ["simple", "parallel"] }

[dev-dependencies]
version-sync = "0.9.5"
criterion = { version = "0.6.0", default-features = false, features = ["cargo_bench_support", "plotters"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7.15", features = ["compat"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
zlib-ng = ["flate2/zlib-ng"]
unstable-async = ["dep:futures-io", "dep:futures-util"]

[[example]]
name = "async_io"
required-features = ["unstable-async"]

[[example]]
name = "change_compression_method"

[[bench]]
name = "create_extract"
harness = false
