[package]
name = "pna"
version = "0.29.3"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "PNA(Portable-Network-Archive) decoding and encoding library"
repository = "https://github.com/ChanTsune/Portable-Network-Archive.git"
readme = "README.md"
categories = ["data-structures", "filesystem"]
keywords = ["pna", "archive", "crypto", "data"]
rust-version = "1.88"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpna = { version = "0.29.2", path = "../lib" }

[dev-dependencies]
version-sync = "0.9.5"

[features]
zlib-ng = ["libpna/zlib-ng"]

[lib]
name = "pna"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "pna = \"[0-9]+\\.[0-9]+\"", replace = "pna = \"{{version}}\"" },
    { file = "src/lib.rs", search = "https://docs.rs/pna/[0-9]+\\.[0-9]+\\.[0-9]+", replace = "https://docs.rs/pna/{{version}}" },
]
