[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[package.metadata.dist]
dist = false

[package.metadata.release]
release = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = { git = "https://github.com/ChanTsune/clap-markdown.git", branch = "issue/54" }
clap_mangen = "0.2"
portable-network-archive = { path = "../cli", default-features = false }
