[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[package.metadata.dist]
dist = false

[package.metadata.release]
release = false

[dependencies]
bzip2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
clap-markdown = { git = "https://github.com/ChanTsune/clap-markdown.git", branch = "issue/54" }
clap_mangen = "0.2"
flate2 = "1.1"
libpna = { path = "../lib" }
liblzma = { version = "0.4", features = ["static"] }
portable-network-archive = { path = "../cli", default-features = false }
tar = "0.4"
tempfile = "3.15.0"
time = "0.3.47"
zip = "8.1.0"
